--- a/src/main/resources/assets/bandb_mod/lang/en_us.lang
+++ b/src/main/resources/assets/bandb_mod/lang/en_us.lang
@@ -1,1 +1,63 @@
-item.itemBottle1664.name=Bottle 1664
+item.itemBottle1664.name=1664 Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+item.itemBottle.name= Empty
+
+
+item.itemBeverage1664.name=1664
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+
