--- a/src/main/resources/assets/bandb_mod/lang/en_us.lang
+++ b/src/main/resources/assets/bandb_mod/lang/en_us.lang
@@ -1,63 +1,73 @@
-item.itemBottle1664.name=1664 Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
-item.itemBottle.name= Empty
+item.itembottle1664.name=1664 Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
+item.itembottle.name= Empty
 
 
-item.itemBeverage1664.name=1664
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
-item.itemBeverage.name=
+
+item.itembeverage1664.name=1664
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
+item.itembeverage.name=
 
