--- a/src/main/resources/assets/bandb_mod/lang/en_us.lang
+++ b/src/main/resources/assets/bandb_mod/lang/en_us.lang
@@ -1,73 +1,112 @@
-item.itembottle1664.name=1664 Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
-item.itembottle.name= Empty
+item.itemBottle1664.name=1664 Empty
+item.itemBottlebenturcola.name=Bentur Cola Empty
+item.itemBottleAlsaceRiesling.name=Alsace Riesling Empty
+item.itemBottleAmaretto.name=Amaretto Empty
+item.itemBottleAngosturaBitter.name=Angostura Bitter Empty
+item.itemBottleBaileys.name=Baileys Empty
+item.itemBottleBenedictine.name=Benedictine Empty
+item.itemBottleBitter.name=Bitter Empty
+item.itemBottleBlueCuracao.name=Blue Curaçao Empty
+item.itemBottleBordeauxChateauLary.name=Bordeaux Chateau Lary Empty
+item.itemBottleBordeauxChateauTourVerite.name=Bordeaux Chateau Tour Verite Empty
+item.itemBottleBourgogneAligote.name=Bourgogne Aligote Empty
+item.itemBottleBrandy.name=Brandy Empty
+item.itemBottleBritt.name=Britt Empty
+item.itemBottleCalvados.name=Calvados Empty
+item.itemBottleCampari.name=Campari Empty
+item.itemBottleCapCorse.name=Cap Corse Empty
+item.itemBottleChampagneMumm.name=Champagne Mumm Empty
+item.itemBottleChartreuseVerte.name=Chartreuse Verte Empty
+item.itemBottleChartreuseJaune.name=Chartreuse Jaune Empty
+item.itemBottleChouchen.name=Chouchen Empty
+item.itemBottleCiderKerne.name=Cider Kerne Empty
+item.itemBottleCognac.name=Cognac Empty
+item.itemBottleCuracaoOrange.name=Curaçao Orange Empty
+item.itemBottleCuracaoTripleSec.name=Curaçao Triple Sec Empty
+item.itemBottleDesperados.name=Desperados Empty
+item.itemBottleDrambuie.name=Drambuie Empty
+item.itemBottleDubonnetRouge.name=Dubonnet Rouge Empty
+item.itemBottleDuvel.name=Duvel Empty
+item.itemBottleEnate.name=Enate Empty
+item.itemBottleFernetBranca.name=Fernet Branca Empty
+item.itemBottleFleurOranger.name=Fleur d'Oranger Empty
+item.itemBottleGet27.name=Get 27 Empty
+item.itemBottleGin.name=Gin Empty
+item.itemBottleGrandMarnier.name=Grand Marnier Empty
+item.itemBottleGrimbergen.name=Grimbergen Empty
+item.itemBottleGuinness.name=Guinness Empty
+item.itemBottleHeineken.name=Heineken Empty
+item.itemBottleHoney.name=Honey Empty
+item.itemBottleKetchup.name=Ketchup Empty
+item.itemBottleLambig.name=Lambig Empty
+item.itemBottleLeffe.name=Leffe Empty
+item.itemBottleLimonade.name=Limonade Empty
+item.itemBottleLiqueur.name=Liqueur Empty
+item.itemBottlePastis51.name=Pastis 51 Empty
+item.itemBottlePerrier.name=Perrier Empty
+item.itemBottlePetrus.name=Petrus Empty
+item.itemBottlePisco.name=Pisco Empty
+item.itemBottlePommeau.name=Pommeau Empty
+item.itemBottlePontarlier.name=Pontarlier Empty
+item.itemBottleRedMartini.name=Red Martini Empty
+item.itemBottleRedPort.name=Red Port Empty
+item.itemBottleRum.name=Rum Empty
+item.itemBottleSanMiguel.name=San Miguel Empty
+item.itemBottleSchweppesAgrum.name=Schweppes Agrum' Empty
+item.itemBottleSchweppesDarkSide.name=Schweppes Dark Side Empty
+item.itemBottleSchweppesGingerAle.name=Schweppes Ginger Ale Empty
+item.itemBottleSchweppesLemon.name=Schweppes Lemon Empty
+item.itemBottleSchweppesMango.name=Schweppes Mango Empty
+item.itemBottleSchweppesPamplemousse.name=Schweppes Pamplemousse Empty
+item.itemBottleSchweppesPassion.name=Schweppes Passion Empty
+item.itemBottleSchweppesPech.name=Schweppes Pech' Empty
+item.itemBottleSchweppesPomme.name=Schweppes Pomme Empty
+item.itemBottleSchweppesRaisin.name=Schweppes Raisin Empty
+item.itemBottleSchweppesRicqles.name=Schweppes Ricqles Empty
+item.itemBottleSchweppesTonic.name=Schweppes Tonic Empty
+item.itemBottleSkoll.name=Skoll Empty
+item.itemBottleSmirnoff.name=Smirnoff Empty
+item.itemBottleSouthernComfort.name=Southern Comfort Empty
+item.itemBottleTabasco.name=Tabasco Empty
+item.itemBottleTequila.name=Tequila Empty
+item.itemBottleVinegar.name=Vinegar Empty
+item.itemBottleVodka.name=Vodka Empty
+item.itemBottleWhiskey.name=Whiskey Empty
+item.itemBottleWhiteMartini.name=White Martini Empty
+item.itemBottleWhitePort.name=White Port Empty
+item.itemBottleWorcestershireSauce.name=Worcestershire Sauce Empty
+item.itemBottleXeres.name=Xeres Empty
+item.itemBottleXII.name=XII Empty
+item.itemBottle.name= Empty
 
 
 
-item.itembeverage1664.name=1664
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
-item.itembeverage.name=
+
+item.itemBeverage1664.name=1664
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+item.itemBeverage.name=
+
 
